Vector Tiles: Add support for feature flag (#72657)
Adds support for future development under a feature flag